# automated_tabular_preprocessor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
automated_tabular_preprocessor/: __init__.py  automated_tabular_preprocessor.py  constants.py  logging_config.py  pipeline.py  preprocessor.py
automated_tabular_preprocessor/steps/: augmentation.py  base.py  correlation.py  drop_columns.py  encoding.py  feature_selection.py  missing_values.py  outliers.py  scaling.py  target_encoding.py  value_replacement.py  variance.py
examples/: basic_usage.py
tests/: __init__.py  conftest.py  test_augmentation.py  test_basic_pipeline.py  test_correlation_variance.py  test_edge_cases.py  test_encoding.py  test_feature_selection.py  test_import.py  test_missing_values.py  test_outliers.py  test_preprocessor.py  test_review_fixes.py  test_scaling.py  test_value_replacement.py
